--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <h2>Apple stock is soaring!</h2>
 <h3>Over the last 5 years apple stock has increased xx%</h3>
 
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script src="chart.js"></script>
+
 </body>
 </html>
